force-app/main/default/objects/Advice__c/fields/Suitability_checklist__c.field-meta.xml
<CustomField>
    <fullName>Suitability_checklist__c</fullName>
    <label>Suitability checklist</label>
    <type>Url</type>
</CustomField>