force-app/main/default/objects/Advice__c/fields/Suitability_Deck_Link__c.field-meta.xml
<CustomField>
    <fullName>Suitability_Deck_Link__c</fullName>
    <description>Link for the suitability deck</description>
    <label>Suitability deck link</label>
    <type>Url</type>
</CustomField>