force-app/main/default/objects/Advice__c/fields/Suitability_In_Progress_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Suitability_In_Progress_Complete_Date__c</fullName>
    <description>Suitability in progress completed date</description>
    <label>Suitability in progress complete date</label>
    <type>Date</type>
</CustomField>