force-app/main/default/objects/Advice__c/fields/Suitability_In_Progress_Days__c.field-meta.xml
<CustomField>
    <fullName>Suitability_In_Progress_Days__c</fullName>
    <formula>Suitability_In_Progress_Complete_Date__c -  Ready_for_Suitability_Complete_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Suitability in progress days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>