force-app/main/default/objects/Advice__c/fields/Suitability_meeting_date_time__c.field-meta.xml
<CustomField>
    <fullName>Suitability_meeting_date_time__c</fullName>
    <inlineHelpText>The date and time of the meeting or, if non-presented, when we shared the suitability deck.</inlineHelpText>
    <label>Suitability meeting date/time</label>
    <type>DateTime</type>
</CustomField>