force-app/main/default/objects/Advice__c/fields/Suitability_meeting_location__c.field-meta.xml
<CustomField>
    <fullName>Suitability_meeting_location__c</fullName>
    <label>Suitability meeting location</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Suitability_meeting_status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Octopus Wealth Office</fullName>
                <label>Nova Office</label>
            </value>
            <value>
                <fullName>Client&#39;s Work</fullName>
            </value>
            <value>
                <fullName>Client&#39;s Home</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>33 Holborn</fullName>
                <isActive>false</isActive>
                <label>33 Holborn</label>
            </value>
            <value>
                <fullName>Carter Lane</fullName>
                <isActive>false</isActive>
                <label>Carter Lane</label>
            </value>
            <value>
                <fullName>Non-presented</fullName>
                <isActive>false</isActive>
                <label>Non-presented</label>
            </value>
            <value>
                <fullName>Webex</fullName>
                <isActive>false</isActive>
                <label>Webex</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>