force-app/main/default/objects/Advice__c/fields/SuitabilityPlannerNotes__c.field-meta.xml
<CustomField>
    <fullName>SuitabilityPlannerNotes__c</fullName>
    <description>A place for the suitability planner to captures notes to help them manage their workload.</description>
    <label>Suitability planner notes</label>
    <type>TextArea</type>
</CustomField>