force-app/main/default/objects/Advice__c/fields/Supporting_Calculations__c.field-meta.xml
<CustomField>
    <fullName>Supporting_Calculations__c</fullName>
    <label>Supporting Calculations</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>