force-app/main/default/objects/Advice__c/fields/Triage_Doc_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Triage_Doc_Sent_Date__c</fullName>
    <description>Date triage document was sent</description>
    <label>Triage document sent date</label>
    <type>Date</type>
</CustomField>