force-app/main/default/objects/Advice__c/fields/Understanding__c.field-meta.xml
<CustomField>
    <fullName>Understanding__c</fullName>
    <inlineHelpText>How did you get on with the questionnaire? Were there any questions you didn’t understand?</inlineHelpText>
    <label>Understanding</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>