force-app/main/default/objects/Advice__c/fields/Update_valuations__c.field-meta.xml
<CustomField>
    <fullName>Update_valuations__c</fullName>
    <inlineHelpText>Yes - will create a task for a specialist to update valuations for related financial products</inlineHelpText>
    <label>Update valuations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>