force-app/main/default/objects/Advice__c/fields/VCT_Titan__c.field-meta.xml
<CustomField>
    <fullName>VCT_Titan__c</fullName>
    <description>Number of Recommendations</description>
    <label>VCT - Titan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>