force-app/main/default/objects/Advice__c/fields/VCT_Titan_RAG__c.field-meta.xml
<CustomField>
    <fullName>VCT_Titan_RAG__c</fullName>
    <label>VCT - Titan RAG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Licencing_RAG_Ratings</valueSetName>
    </valueSet>
</CustomField>