force-app/main/default/objects/Advice__c/fields/Volatility__c.field-meta.xml
<CustomField>
    <fullName>Volatility__c</fullName>
    <inlineHelpText>How do you feel about investments going up and down in value?

Include each profile’s historic worst fall for reference - How would you feel about a fall of -X%?</inlineHelpText>
    <label>Volatility</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>