force-app/main/default/objects/Advice__c/fields/Voyant_notes__c.field-meta.xml
<CustomField>
    <fullName>Voyant_notes__c</fullName>
    <inlineHelpText>Things that need to be added/completed later on</inlineHelpText>
    <label>zDel - Voyant notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>