force-app/main/default/objects/Advice__c/fields/Voyants_added_to_deck__c.field-meta.xml
<CustomField>
    <fullName>Voyants_added_to_deck__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Voyants have been approved and added to the deck</inlineHelpText>
    <label>zDel - Voyants added to deck</label>
    <type>Checkbox</type>
</CustomField>