force-app/main/default/objects/Advice__c/fields/X4_eye_review_complete_date__c.field-meta.xml
<CustomField>
    <fullName>X4_eye_review_complete_date__c</fullName>
    <label>4 eye review complete date</label>
    <type>Date</type>
</CustomField>