force-app/main/default/objects/Advice__c/recordTypes/Advice_RT_General_Advice.recordType-meta.xml
<RecordType>
    <fullName>Advice_RT_General_Advice</fullName>
    <active>true</active>
    <description>RT for general advice, this will be broken into many</description>
    <label>General Advice</label>
</RecordType>