force-app/main/default/objects/Advice__c/recordTypes/AnnualReview.recordType-meta.xml
<RecordType>
    <fullName>AnnualReview</fullName>
    <active>true</active>
    <description>For any annual review.</description>
    <label>Annual review</label>
</RecordType>