force-app/main/default/objects/Advice__c/recordTypes/DB_Advice.recordType-meta.xml
<RecordType>
    <fullName>DB_Advice</fullName>
    <active>true</active>
    <description>Advice on DB Pension</description>
    <label>DB Advice</label>
</RecordType>