force-app/main/default/objects/Advice__c/recordTypes/Protection.recordType-meta.xml
<RecordType>
    <fullName>Protection</fullName>
    <active>true</active>
    <description>For advice that involves protection recommendations only.</description>
    <label>Protection</label>
</RecordType>