force-app/main/default/objects/Advice__c/recordTypes/RegularAmendment.recordType-meta.xml
<RecordType>
    <fullName>RegularAmendment</fullName>
    <active>true</active>
    <description>Amendments to regular contributions - cancelling, reducing, or pausing.</description>
    <label>Regular Amendment</label>
</RecordType>