force-app/main/default/objects/Advice__c/recordTypes/TopUp.recordType-meta.xml
<RecordType>
    <fullName>TopUp</fullName>
    <active>true</active>
    <description>For lump sum or regular deposits to GIA, ISA, SIPP, JISA, JSIPP.</description>
    <label>Top up</label>
</RecordType>