force-app/main/default/objects/Advice__c/recordTypes/TrustOnboarding.recordType-meta.xml
<RecordType>
    <fullName>TrustOnboarding</fullName>
    <active>true</active>
    <description>For onboarding of trusts as clients.</description>
    <label>Trust Onboarding</label>
</RecordType>