force-app/main/default/objects/Advice__c/recordTypes/Withdrawal.recordType-meta.xml
<RecordType>
    <fullName>Withdrawal</fullName>
    <active>true</active>
    <description>Lump sum or regular withdrawals from an ISA or GIA only.</description>
    <label>Withdrawal</label>
</RecordType>