force-app/main/default/objects/Advice__c/validationRules/AdviceClosedCannotReopen.validationRule-meta.xml
<ValidationRule>
    <fullName>AdviceClosedCannotReopen</fullName>
    <active>true</active>
    <description>Once advice has been closed, it cannot be re-opened. This ensures that a business process of creating new advice is followed.</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c 
&amp;&amp; 
PRIORVALUE( IsClosed__c ) = true
&amp;&amp;
IsClosed__c = false
&amp;&amp;
$User.Username &lt;&gt; &quot;cian@novawm.com&quot;
&amp;&amp;
$User.Username &lt;&gt; &quot;donna@novawm.com&quot;</errorConditionFormula>
    <errorDisplayField>Advice_Status__c</errorDisplayField>
    <errorMessage>This advice is closed and cannot be re-opened. You should create new advice or talk with the Salesforce team if you need support.</errorMessage>
</ValidationRule>