force-app/main/default/objects/Advice__c/validationRules/AdviceDateGivenRestrictions.validationRule-meta.xml
<ValidationRule>
    <fullName>AdviceDateGivenRestrictions</fullName>
    <active>true</active>
    <description>Restrictions on the date the advice is given to ensure it is after the deck was completed and before the deck expires. Also ensures the date isn&#39;t in the future.</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c &amp;&amp; 
((NOT(ISBLANK(AdviceDeckExpiry__c)) &amp;&amp;
DATEVALUE(Suitability_meeting_date_time__c) &gt; AdviceDeckExpiry__c) ||
(DATEVALUE(Suitability_meeting_date_time__c) &lt;  AdviceDeckCompleteDate__c))</errorConditionFormula>
    <errorMessage>Advice cannot be given in the future, after the deck has expired, or before if was completed.</errorMessage>
</ValidationRule>