force-app/main/default/objects/Advice__c/validationRules/AdviceDeclinedCannotChangeDecision.validationRule-meta.xml
<ValidationRule>
    <fullName>AdviceDeclinedCannotChangeDecision</fullName>
    <active>true</active>
    <description>Once advice has been declined, it cannot be moved to another status.</description>
    <errorConditionFormula>ISPICKVAL(PRIORVALUE(Advice_Status__c), &quot;Suitability declined&quot;)
&amp;&amp;
NOT(ISPICKVAL( Advice_Status__c, &quot;Suitability declined&quot; ))
&amp;&amp;
$User.Username &lt;&gt; &quot;cian@novawm.com&quot;</errorConditionFormula>
    <errorDisplayField>Advice_Status__c</errorDisplayField>
    <errorMessage>Declined advice cannot be moved to another status.</errorMessage>
</ValidationRule>