force-app/main/default/objects/Advice__c/validationRules/AdviceMethodRestriction.validationRule-meta.xml
<ValidationRule>
    <fullName>AdviceMethodRestriction</fullName>
    <active>false</active>
    <description>Ensures that if there&apos;s a restriction on how the advice is given, this is respected.</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c &amp;&amp; 
((ISPICKVAL(AdviceType__r.AdviceMethod__c, &quot;PRESENTED&quot;) &amp;&amp; 
NOT(ISPICKVAL(AdviceMethod__c, &quot;PRESENTED&quot;))) ||
(ISPICKVAL(AdviceType__r.AdviceMethod__c, &quot;NON_PRESENTED&quot;) &amp;&amp; 
NOT(ISPICKVAL(AdviceMethod__c, &quot;NON_PRESENTED&quot;))))</errorConditionFormula>
    <errorMessage>The way this advice can be given is restricted.</errorMessage>
</ValidationRule>