force-app/main/default/objects/Advice__c/validationRules/AdviceNonPresented.validationRule-meta.xml
<ValidationRule>
    <fullName>AdviceNonPresented</fullName>
    <active>true</active>
    <description>Ensures that when advice is being marked as non-presented, it is also moved along to an appropriate status.</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c &amp;&amp; 
ISPICKVAL(Suitability_meeting_status__c, &quot;Non-presented&quot;)
&amp;&amp;
NOT(AdvicePresented__c)</errorConditionFormula>
    <errorMessage>If the advice is non-presented, it must be moved to a status of await decision, in fulfilment, complete, or suitability declined.</errorMessage>
</ValidationRule>