force-app/main/default/objects/Advice__c/validationRules/AdvicePresentedCannotMoveBack.validationRule-meta.xml
<ValidationRule>
    <fullName>AdvicePresentedCannotMoveBack</fullName>
    <active>true</active>
    <description>Once advice has been presented, it cannot be moved back to a status that corresponds to advice being non-presented. There are key controls tied to the fact advice has been presented as this is when more regulatory commitment becomes involved so</description>
    <errorConditionFormula>AdvicePresented__c
&amp;&amp;
NOT(ISPICKVAL(Advice_Status__c, &quot;Await decision&quot;) ||
ISPICKVAL(Advice_Status__c, &quot;Awaiting acceptance&quot;) ||
ISPICKVAL(Advice_Status__c, &quot;In fulfilment&quot;) ||
ISPICKVAL(Advice_Status__c, &quot;Suitability Declined&quot;) ||
ISPICKVAL(Advice_Status__c, &quot;Complete&quot;))</errorConditionFormula>
    <errorDisplayField>Advice_Status__c</errorDisplayField>
    <errorMessage>This advice has already been presented so cannot be moved back in the process.</errorMessage>
</ValidationRule>