force-app/main/default/objects/Advice__c/validationRules/AdvicePresentedMeetingDateTimeNeeded.validationRule-meta.xml
<ValidationRule>
    <fullName>AdvicePresentedMeetingDateTimeNeeded</fullName>
    <active>true</active>
    <description>Ensures that a suitability meeting date/time is recorded for all advice that is marked as being presented.</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c 
&amp;&amp; 
AdvicePresented__c
&amp;&amp;
ISBLANK( Suitability_meeting_date_time__c )
&amp;&amp;
NOT(RecordType.DeveloperName = &quot;RegularAmendment&quot;)</errorConditionFormula>
    <errorMessage>Please record the advice meeting details or mark this as being non-presented.</errorMessage>
</ValidationRule>