force-app/main/default/objects/Advice__c/validationRules/AnnualReviewRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>AnnualReviewRequired</fullName>
    <active>true</active>
    <description>Ensures that if the advice is of annual review type, there is a review linked.</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c &amp;&amp; 
(AdviceType__r.DeveloperName__c = &quot;ANNUAL_REVIEW_ACCUMULATION&quot; ||
AdviceType__r.DeveloperName__c = &quot;ANNUAL_REVIEW_RETIREMENT&quot;) &amp;&amp;
NOT(ISPICKVAL(Advice_Status__c, &quot;Cancelled&quot;)) &amp;&amp;
ISBLANK(OW_review__c)</errorConditionFormula>
    <errorDisplayField>OW_review__c</errorDisplayField>
    <errorMessage>A review must be linked to annual review advice.</errorMessage>
</ValidationRule>