force-app/main/default/objects/Advice__c/validationRules/CancelAdvice.validationRule-meta.xml
<ValidationRule>
    <fullName>CancelAdvice</fullName>
    <active>true</active>
    <description>Cannot cancel advice if it has already been presented</description>
    <errorConditionFormula>AdvicePresented__c = true
&amp;&amp;
ISPICKVAL(Advice_Status__c,&quot;Cancelled&quot;)</errorConditionFormula>
    <errorMessage>Advice cannot be cancelled if it&#39;s already been presented.</errorMessage>
</ValidationRule>