force-app/main/default/objects/Advice__c/validationRules/CancellationReasonRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>CancellationReasonRequired</fullName>
    <active>false</active>
    <description>Legacy validation rule that can be deleted in time. Deactivated 17 Nov 2023, give it 3 months to make sure this does not cause problems.</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c &amp;&amp; 
AND(Advice_Cancelled__c = true, 
(ISBLANK(Reason_for_Cancellation__c)
||
ISPICKVAL(DeclinedReason__c,&quot;&quot;))
)</errorConditionFormula>
    <errorMessage>You need to add a declined reason, or reason for cancellation.</errorMessage>
</ValidationRule>