force-app/main/default/objects/Advice__c/validationRules/CannotChangeStatusOnceCancelled.validationRule-meta.xml
<ValidationRule>
    <fullName>CannotChangeStatusOnceCancelled</fullName>
    <active>true</active>
    <description>Business use: Once advice has been moved to cancelled, cannot amend the status after that
Tech use: n/a</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c 
&amp;&amp; 
ISPICKVAL(PRIORVALUE(Advice_Status__c), &quot;Cancelled&quot; )
&amp;&amp;
NOT(ISPICKVAL(Advice_Status__c, &quot;Cancelled&quot; ))
&amp;&amp;
$User.Username &lt;&gt; &quot;cian@novawm.com&quot;
&amp;&amp;
$User.Username &lt;&gt; &quot;donna@novawm.com&quot;</errorConditionFormula>
    <errorMessage>Once Advice has been cancelled, you cannot amend the status. Please create new advice</errorMessage>
</ValidationRule>