force-app/main/default/objects/Advice__c/validationRules/CreateAFactFind.validationRule-meta.xml
<ValidationRule>
    <fullName>CreateAFactFind</fullName>
    <active>false</active>
    <description>Deletion candidate as relates to legacy PFP fact find process</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c 
&amp;&amp; 
AND(
 ISPICKVAL(Fact_find_requirements__c, &quot;Update required&quot;),
ISPICKVAL( Advice_Status__c , &quot; Data Gathering&quot;),
ISBLANK( Full_Fact_Find__c )
)</errorConditionFormula>
    <errorDisplayField>Full_Fact_Find__c</errorDisplayField>
    <errorMessage>You need to create a fact find</errorMessage>
</ValidationRule>