force-app/main/default/objects/Advice__c/validationRules/DB_Data_Gathering.validationRule-meta.xml
<ValidationRule>
    <fullName>DB_Data_Gathering</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.Id = &#39;0124J000000qj42&#39;,
 ISPICKVAL(Advice_Status__c, &#39;Data gathering&#39;),
ISBLANK( Date_Client_Confirmed_Understanding__c)


)</errorConditionFormula>
    <errorMessage>You need to enter the date on which the client confirmed understanding of the triage process</errorMessage>
</ValidationRule>