force-app/main/default/objects/Advice__c/validationRules/DeckCompleteDateRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>DeckCompleteDateRequired</fullName>
    <active>true</active>
    <description>Ensures that advice cannot go back from deck complete to suitability in progress.</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c &amp;&amp; (
RecordType.DeveloperName = &quot;Advice_RT_General_Advice&quot;
&amp;&amp;
ISBLANK( AdviceDeckCompleteDate__c )
&amp;&amp;
(ISPICKVAL(Advice_Status__c, &quot;Deck complete&quot;) ||
ISPICKVAL(Advice_Status__c, &quot;Await decision&quot;) ||
ISPICKVAL(Advice_Status__c, &quot;In fulfilment&quot;) ||
ISPICKVAL(Advice_Status__c, &quot;Suitability Declined&quot;) ||
ISPICKVAL(Advice_Status__c, &quot;Complete&quot;))
&amp;&amp;
NOT(AdviceType__r.DeveloperName__c = &quot;REGULAR_AMENDMENT&quot;)
)</errorConditionFormula>
    <errorMessage>A deck complete date is required to move to this status.</errorMessage>
</ValidationRule>