force-app/main/default/objects/Advice__c/validationRules/DeckCompleteRestrictions.validationRule-meta.xml
<ValidationRule>
    <fullName>DeckCompleteRestrictions</fullName>
    <active>false</active>
    <description>Ensures correct fields are complete before moving to deck complete.</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c &amp;&amp;
(
AND(
ISPICKVAL( 
Advice_Status__c, &quot;Deck complete&quot;
)

,

OR(

NOT( ISPICKVAL( 
Full_Fact_Find_Status__c, &quot;Complete&quot;)) 

,

ISBLANK(Suitability_checklist__c) 
,

LOA_s_Completed__c = FALSE 

, 

ISPICKVAL( New_LOAs_required__c, &quot;No&quot;) 


))
)</errorConditionFormula>
    <errorMessage>Suitability checklist is blank, Fact find is not complete, LOAs are not complete or New LOAs  required</errorMessage>
</ValidationRule>