force-app/main/default/objects/Advice__c/validationRules/EnsureRelevantName.validationRule-meta.xml
<ValidationRule>
    <fullName>EnsureRelevantName</fullName>
    <active>true</active>
    <description>Forces the name to be changed from its default &quot;To be setup&quot;</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c 
&amp;&amp; 
AND(
Subject__c = &quot;To be Setup&quot;, 
ISPICKVAL(Advice_Status__c, &quot;Data gathering&quot;)
)</errorConditionFormula>
    <errorDisplayField>Subject__c</errorDisplayField>
    <errorMessage>Change the subject to something other than &quot;To be Setup&quot;</errorMessage>
</ValidationRule>