force-app/main/default/objects/Advice__c/validationRules/FactFindRequirements.validationRule-meta.xml
<ValidationRule>
    <fullName>FactFindRequirements</fullName>
    <active>true</active>
    <description>Deletion candidate as this field is being replaced. Ensures that the fact find requirements field is selected before a piece of advice can be moved out of set up</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c 
&amp;&amp; 
NOT( ISPICKVAL( Advice_Status__c ,&quot;Setup&quot;))
&amp;&amp;
NOT( ISPICKVAL( Advice_Status__c ,&quot;Cancelled&quot;))
&amp;&amp;
ISPICKVAL(Fact_find_requirements__c, &quot;&quot;)
&amp;&amp;
(RecordType.DeveloperName = &apos;Advice_RT_General_Advice&apos; ||
RecordType.DeveloperName = &apos;DB_Advice&apos; )</errorConditionFormula>
    <errorDisplayField>Fact_find_requirements__c</errorDisplayField>
    <errorMessage>You need to add the fact find requirements</errorMessage>
</ValidationRule>