force-app/main/default/objects/Advice__c/validationRules/FactFindUpdateType.validationRule-meta.xml
<ValidationRule>
    <fullName>FactFindUpdateType</fullName>
    <active>false</active>
    <description>Deletion candidate as relates to legacy PFP fact find process</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c 
&amp;&amp; 
AND(
ISPICKVAL(Fact_find_requirements__c,&quot;Update required&quot;),
ISBLANK(Full_Fact_Find__c), 
ISPICKVAL( Advice_Status__c, &quot;Data gathering&quot;), 
ISPICKVAL(Advice_Household__r.Fact_Find_Type__c, &quot;&quot;) 
)</errorConditionFormula>
    <errorDisplayField>Full_Fact_Find__c</errorDisplayField>
    <errorMessage>You need to link a fact find</errorMessage>
</ValidationRule>