force-app/main/default/objects/Advice__c/validationRules/FinishSetup.validationRule-meta.xml
<ValidationRule>
    <fullName>FinishSetup</fullName>
    <active>false</active>
    <description>What they need to do before they can select the data gathering stage</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c 
&amp;&amp; 
AND(
NOT(ISPICKVAL(Advice_Status__c, &quot;Setup&quot;)),
OR(  
ISPICKVAL(Update_valuations__c,&quot;&quot;),
ISPICKVAL(New_LOAs_required__c,&quot;&quot;),
ISPICKVAL(New_or_existing_client__c,&quot;&quot;)
))</errorConditionFormula>
    <errorMessage>You need to complete the Setup section</errorMessage>
</ValidationRule>