force-app/main/default/objects/Advice__c/validationRules/MeetingDetailsRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>MeetingDetailsRequired</fullName>
    <active>true</active>
    <description>Ensures that a suitability meeting date/time is recorded.</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c &amp;&amp; (
(ISPICKVAL( Advice_Status__c, &quot;Await decision&quot; )
||
ISPICKVAL( Advice_Status__c, &quot;In fulfilment&quot; )
||
ISPICKVAL( Advice_Status__c, &quot;Complete&quot; ))
&amp;&amp;
ISBLANK( Suitability_meeting_date_time__c )
&amp;&amp;
NOT( RecordType.DeveloperName = &quot;RegularAmendment&quot;)
)</errorConditionFormula>
    <errorMessage>Please record the advice meeting details or mark this as being non-presented.</errorMessage>
</ValidationRule>