force-app/main/default/objects/Advice__c/validationRules/OW_no_suitability_rtq_incomplete.validationRule-meta.xml
<ValidationRule>
    <fullName>OW_no_suitability_rtq_incomplete</fullName>
    <active>false</active>
    <description>Prevents advice from moving to suitability stages while RTQs are incomplete</description>
    <errorConditionFormula>AND (
     ISCHANGED( Advice_Status__c ),
     OR (
          TEXT(Advice_Status__c) = &#39;Ready for suitability&#39;,
          TEXT(Advice_Status__c) = &#39;Suitability in progress&#39;,
          TEXT(Advice_Status__c) = &#39;Deck complete&#39;,
          TEXT(Advice_Status__c) = &#39;Await decision&#39;,
          TEXT(Advice_Status__c) = &#39;In fulfilment&#39;,
          TEXT(Advice_Status__c) = &#39;Complete&#39;
     ),
     OR ( TEXT(PRIORVALUE(Advice_Status__c)) = &#39;Setup&#39;,
          TEXT(PRIORVALUE(Advice_Status__c)) = &#39;Data Gathering&#39;,
          TEXT(PRIORVALUE(Advice_Status__c)) = &#39;Risk call&#39;
     ),
     OR ( 
          ISPICKVAL(Advice_Household__r.OW_rtq_status__c,
          &quot;Incomplete&quot;),
          ISPICKVAL(Advice_Household__r.OW_rtq_status__c,
          &quot;Pending&quot;)
     )
)</errorConditionFormula>
    <errorMessage>RTQs for this household need to be completed before you can progress to Ready for suitability</errorMessage>
</ValidationRule>