force-app/main/default/objects/Advice__c/validationRules/PresentedConfirmationRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>PresentedConfirmationRequired</fullName>
    <active>true</active>
    <description>Requires that a human has confirmed the advice has been shared with the client prior to progressing advice to the meeting held stage or beyond.</description>
    <errorConditionFormula>NOT(AdvicePresented__c)
&amp;&amp;
(ISPICKVAL(Advice_Status__c, &quot;Await decision&quot;) ||
ISPICKVAL(Advice_Status__c, &quot;Awaiting acceptance&quot;) ||
ISPICKVAL(Advice_Status__c, &quot;In fulfilment&quot;) ||
ISPICKVAL(Advice_Status__c, &quot;Suitability Declined&quot;) ||
ISPICKVAL(Advice_Status__c, &quot;Complete&quot;))
&amp;&amp;
NOT(AdviceType__r.DeveloperName__c = &quot;REGULAR_AMENDMENT&quot;)</errorConditionFormula>
    <errorDisplayField>Advice_Status__c</errorDisplayField>
    <errorMessage>Please confirm how the advice was presented to the customer by using the Advice Presented button.</errorMessage>
</ValidationRule>