force-app/main/default/objects/Advice__c/validationRules/PreventCancellationPresentedAdvice.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventCancellationPresentedAdvice</fullName>
    <active>true</active>
    <description>Cannot cancel advice if it has already been presented</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c 
&amp;&amp; 
AdvicePresented__c = true
&amp;&amp;
ISPICKVAL(Advice_Status__c,&quot;Cancelled&quot;)</errorConditionFormula>
    <errorMessage>Advice cannot be cancelled if it&apos;s already been presented.</errorMessage>
</ValidationRule>