force-app/main/default/objects/Advice__c/validationRules/PreventSuitabilityWithExpiredRtqs.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventSuitabilityWithExpiredRtqs</fullName>
    <active>false</active>
    <description>Deletion candidate as replaced through onboarding. Rule to prevent advice from moving to suitability before risk questionnaires are complete</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c &amp;&amp; 
AND (
     ISCHANGED( Advice_Status__c ),
     OR (
          TEXT(Advice_Status__c) = &apos;Ready for suitability&apos;,
          TEXT(Advice_Status__c) = &apos;Suitability in progress&apos;,
          TEXT(Advice_Status__c) = &apos;Deck complete&apos;,
          TEXT(Advice_Status__c) = &apos;Await decision&apos;,
          TEXT(Advice_Status__c) = &apos;In fulfilment&apos;,
          TEXT(Advice_Status__c) = &apos;Complete&apos;
     ),
     OR ( TEXT(PRIORVALUE(Advice_Status__c)) = &apos;Setup&apos;, 
          TEXT(PRIORVALUE(Advice_Status__c)) = &apos;Data Gathering&apos;, 
          TEXT(PRIORVALUE(Advice_Status__c)) = &apos;Risk call&apos;
     ),
     ISPICKVAL(Advice_Household__r.OW_rtq_status__c, 
     &quot;Expired&quot;) 
)</errorConditionFormula>
    <errorMessage>RTQs for this household have expired and will need to be updated before you can progress to Ready for suitability</errorMessage>
</ValidationRule>